--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="rv_title">#7D7D7D</color>
     <color name="red_700">#D32F2F</color>
     <color name="red_200">#EF9A9A</color>
     <color name="blue">#5C6BC0</color>
