--- a/app/src/main/res/layout/fragment_scrum.xml
+++ b/app/src/main/res/layout/fragment_scrum.xml
@@ -8,17 +8,17 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/tv_task"
+            android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="24sp"
+            android:text="@string/text_task"
             android:textColor="@color/rv_title"
             android:layout_marginStart="22dp"
             android:layout_marginEnd="22dp"
             app:layout_constraintBottom_toTopOf="@id/rv_task"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="@string/text_task" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_task"
