--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SoVamu" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SoVamu" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/red_700</item>
         <item name="colorPrimaryVariant">@android:color/holo_red_dark</item>
@@ -12,5 +12,10 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+    </style>
+
+    <style name="StyleBottomNavigation" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="background">@drawable/gradient_bottom_navigation</item>
     </style>
 </resources>
