--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="fabColor">#2B2B2B</color>
     <color name="red_200">#EF9A9A</color>
     <color name="blue">#5C6BC0</color>
+    <color name="text_notification">#7D8A1B</color>
 </resources>
