--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,14 @@
         <item name="android:layout_marginLeft">24dp</item>
         <item name="android:layout_marginBottom">8dp</item>
     </style>
+    
+    <style name="TitleNotification">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginRight">120dp</item>
+
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/text_notification</item>
+    </style>
 </resources>
