binding data from scrumfragment to notification_layout

--- a/app/src/main/res/layout/fragment_scrum.xml
+++ b/app/src/main/res/layout/fragment_scrum.xml
@@ -3,6 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="title_notification"
+            type="String" />
+
+        <variable
+            name="notification_text"
+            type="String" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -13,8 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            app:titleText="@{@string/title_notification}"
-            app:notificationText="@{@string/notification_test}"
+            app:titleText="@{title_notification}"
+            app:notificationText="@{notification_text}"
             app:layout_constraintBottom_toTopOf="@+id/tv_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
